<resources>
    <string name="app_name">SportCenter</string>
    <string name="notification_weather">Ativar as notificações</string>
    <string name="not_weather">Terminar sessão</string>
    <string name="pref_languages_default">Português</string>
    <string name="title_activity_login">SportCenter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Sessão ou Registar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Email Inválido!</string>
    <string name="error_invalid_password">Password demasiado curta!</string>
    <string name="error_incorrect_password">Password Incorreta!</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="preco">Preço</string>
    <string name="todo">TODO</string>
    <string name="im">…</string>
    <string name="title_activity_maps">Map</string>
    <string name="def">Definições</string>
    <string name="shopping_cart_example">Shopping Cart Example</string>
    <string name="checkout">Checkout</string>
    <string name="thank_you_for_purchasing_product">Thank you for purchasing product</string>
    <string name="shop_ping_cart_content">Shop ping Cart Content</string>
    <string name="payment">Payment</string>
    <string name="ligar">Ligar</string>
    <string name="adicionar_ao_carrinho">Adicionar ao Carrinho</string>
    <string name="pre_o">Preço</string>
    <string name="descri_o">Descrição</string>
    <string name="tamanho">Tamanho</string>
    <string name="cor">Cor</string>
    <string name="composi_o">Composição</string>
    <string name="sexo">Sexo</string>
    <string name="_99">99</string>
    <string name="carrinho">Carrinho</string>
    <string name="carrinho_de_compras">Carrinho de Compras</string>
    <string name="logOutC">Logout</string>
    <string name="ver_todas_as_cole_es">Ver todas as coleções</string>
    <string name="todos_os_artigos">Todos os artigos</string>
    <string name="ver_artigos_para_crian_a">Ver artigos para criança</string>
    <string name="crixan_a">Criança</string>
    <string name="ver_artigos_para_mulher">Ver artigos para mulher</string>
    <string name="mulher">Mulher</string>
    <string name="ver_artigos_para_homem">Ver artigos para homem</string>
    <string name="homem">Homem</string>
    <string name="imgcatalogo">imgCatalogo</string>
    <string name="imgcatcrianca">imgcatCrianca</string>
    <string name="imgcattodos">imgcatTodos</string>
    <string name="cat_logo">Catálogo</string>
    <string name="imgcat">imgcat</string>
    <string name="ver_artigos_dispon_veis">Ver artigos disponíveis</string>
    <string name="encomendas">Encomendas</string>
    <string name="ver_compras_efetuadas">Ver compras efetuadas</string>
    <string name="promo_es">Promoções</string>
    <string name="ver_artigos_com_desconto">Ver artigos com desconto</string>
    <string name="contactos">Contactos</string>
    <string name="obter_informa_es_de_contacto">Obter informações de contacto</string>
    <string name="morada">Morada</string>
    <string name="rua_do_ordonho_de_cima_n_61">Rua do Ordonho de Cima, nº 61</string>
    <string name="localidade">Localidade</string>
    <string name="_4575_036_alpendurada_e_matos">4575-036, Alpendurada e Matos</string>
    <string name="email">Email</string>
    <string name="sportcenter_gmail_com">sportcenter@gmail.com</string>
    <string name="telefone">Telefone</string>
    <string name="_255611611">255611611</string>
    <string name="total">Total</string>
    <string name="a_sua_encomenda_foi_registada_obrigado">A sua encomenda foi registada! Obrigado!</string>
    <string name="n_mero">Número:</string>
    <string name="voltar_ao_inicio">voltar ao inicio</string>
    <string name="detalhes">Detalhes</string>
    <string name="add">add</string>
    <string name="wishlist">Wishlist</string>
    <string name="top_desejados">Top Desejados</string>
    <string name="ver_os_produtos_mais_desejados">Ver os produtos mais desejados</string>
    <string name="lista_de_desejos">Lista de desejos</string>
    <string name="top_homem">Top Homem</string>
    <string name="artigos_mais_desejados_para_homem">Artigos desejados para homem</string>
    <string name="top_mulher">Top Mulher</string>
    <string name="artigos_mais_desejados_para_mulher">Artigos desejados para mulher</string>
    <string name="top_crian_a">Top Criança</string>
    <string name="artigos_desejados_para_crian_a">Artigos desejados para criança</string>
    <string name="top_artigos">Top Artigos</string>
    <string name="ver_os_artigos_mais_desejados">Ver os artigos mais desejados</string>
</resources>
